--- a/bosh/test_js.html
+++ b/bosh/test_js.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>HXMPP.BOSH</title>
+<title>HXMPP.BOSH.js</title>
 <script type="text/javascript" src="test.js"></script>
 <style type="text/css">
 html { height:100%; }
