--- a/socketbridge/test.html
+++ b/socketbridge/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>HXMPP.socketbridge</title>
-<script type="text/javascript" src="swfobject.js"></script>
+<script type="text/javascript" src="../swfobject.js"></script>
 <script type="text/javascript" src="test.js"></script>
 </head>
 <body onload="Test.main();">
