--- a/air/bin/test.html
+++ b/air/bin/test.html
@@ -4,9 +4,7 @@
 <script type="text/javascript" src="AIRAliases.js"></script>
 <script type="text/javascript" src="test.js"></script>
 <style type="text/css">
-body {
-	font-size: 9px;
-}
+body { font-size: 9px; }
 </style>
 </head>
 <body onload="Test.main();">
