--- a/echobot/echobot_js.html
+++ b/echobot/echobot_js.html
@@ -11,7 +11,7 @@ body { height:100%; }
 <div id="haxe:trace"></div>
 <div>HXMPP.echobot.js</div>
 <script type="text/javascript">
-EchoRoboter.main();
+EchoBot.main();
 </script>
 </body>
 </html>
