--- a/startTLS/test_fl.html
+++ b/startTLS/test_fl.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>HXMPP.startTLS</title>
+<title>HXMPP.fl.startTLS</title>
 <script type="text/javascript" src="../swfobject.js"></script>
 <style type="text/css">
 html { height:100%; }
@@ -10,7 +10,7 @@ body { height:100%; }
 <body>
 <div id="swf">NO FLASHPLAYER DETECTED</div>
 <script type="text/javascript">
-swfobject.embedSWF("test.swf","swf","1600","800","9.0.0");
+swfobject.embedSWF("test.swf","swf","100%","100%","9");
 </script>
 </body>
 </html>
