--- a/startTLS/test_js.html
+++ b/startTLS/test_js.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>HXMPP.startTLS</title>
-<script type="text/javascript" src="swfobject.js"></script>
+<title>HXMPP.js.startTLS</title>
+<script type="text/javascript" src="../swfobject.js"></script>
 <script type="text/javascript" src="test.js"></script>
 </head>
 <body onload="Test.main();">
