--- a/vcard/test_fl.html
+++ b/vcard/test_fl.html
@@ -10,7 +10,7 @@ body { height:100%; }
 <body>
 <div id="flash"></div>
 <script type="text/javascript">
-swfobject.embedSWF("test.swf","flash","600","400","9.0.0");
+swfobject.embedSWF("test.swf","flash","100%","100%","10");
 </script>
 </body>
 </html>
