removed swfobject dependency from all tests

--- a/echobot/echobot_fl.html
+++ b/echobot/echobot_fl.html
@@ -5,13 +5,9 @@
 html { height:100%; }
 body { height:100%; }
 </style>
-<script type="text/javascript" src="../swfobject.js"></script>
 </head>
 <body>
 <div>HXMPP.echobot.flash</div>
-<div id="swf">NO FLASHPLAYER DETECTED</div>
-<script type="text/javascript">
-swfobject.embedSWF("echobot.swf","swf","600","400","9.0.0");
-</script>
+<object type="application/x-shockwave-flash" data="echobot.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
