--- a/bosh/test_fl.html
+++ b/bosh/test_fl.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<title>HXMPP.BOSH.flash</title>
-<script type="text/javascript" src="../swfobject.js"></script>
+<title>HXMPP.bosh.flash</title>
 <style type="text/css">
 html { height:100%; }
 body { height:100%; }
@@ -10,9 +9,6 @@ body { height:100%; }
 <body>
 <div>HXMPP.BOSH.flash</div>
 <div id="haxe:trace"></div>
-<div id="flash"></div>
-<script type="text/javascript">
-swfobject.embedSWF("test.swf","flash","1400","600","9.0.0");
-</script>
+<object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
