--- a/filetransfer_si/bin/test_reciever_fl.html
+++ b/filetransfer_si/bin/test_reciever_fl.html
@@ -1,16 +1,12 @@
 <html>
 <head>
 <title>HXMPP.filetransfer.reciever.flash</title>
-<script type="text/javascript" src="../../swfobject.js"></script>
 <style type="text/css">
 html { height:100%; }
 body { height:100%; }
 </style>
 </head>
 <body>
-<div id="flash"></div>
-<script type="text/javascript">
-swfobject.embedSWF("reciever.swf","flash","800","600","9.0.0");
-</script>
+<object type="application/x-shockwave-flash" data="reciever.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
