--- a/jingle.rtmp/www/caller.html
+++ b/jingle.rtmp/www/caller.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 <title>HXMPP.jingle.rtmp.caller</title>
-<script type="text/javascript" src="../../swfobject.js"></script>
 <style type="text/css">
 html { height:100%; }
 body {
@@ -11,9 +10,6 @@ body {
 </style>
 </head>
 <body>
-<div id="swf">NO FLASHPLAYER DETECTED</div>
-<script type="text/javascript">
-swfobject.embedSWF("caller.swf","swf","100%","100%","9.0.0");
-</script>
+<object type="application/x-shockwave-flash" data="caller.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
