--- a/startTLS/test_fl.html
+++ b/startTLS/test_fl.html
@@ -1,16 +1,12 @@
 <html>
 <head>
-<title>HXMPP.fl.startTLS</title>
-<script type="text/javascript" src="../swfobject.js"></script>
+<title>HXMPP.startTLS.flash</title>
 <style type="text/css">
 html { height:100%; }
 body { height:100%; }
 </style>
 </head>
 <body>
-<div id="swf">NO FLASHPLAYER DETECTED</div>
-<script type="text/javascript">
-swfobject.embedSWF("test.swf","swf","100%","100%","9");
-</script>
+<object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
