--- a/swc/test.html
+++ b/swc/test.html
@@ -1,17 +1,12 @@
 <html>
 <head>
 <title>HXMPP.as3</title>
-<script type="text/javascript" src="../swfobject.js"></script>
 <style type="text/css">
-html { height:100%; }
-body { height:100%; }
+html, body { height:100%; }
 </style>
 </head>
 <body>
 <div id="haxe:trace"></div>
-<div id="flash"></div>
-<script type="text/javascript">
-swfobject.embedSWF("test.swf","flash","600","400","9.0.0");
-</script>
+<object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
