--- a/vcard/test_fl.html
+++ b/vcard/test_fl.html
@@ -1,16 +1,12 @@
 <html>
 <head>
 <title>HXMPP.vcard.flash</title>
-<script type="text/javascript" src="../swfobject.js"></script>
 <style type="text/css">
 html { height:100%; }
 body { height:100%; }
 </style>
 </head>
 <body>
-<div id="flash"></div>
-<script type="text/javascript">
-swfobject.embedSWF("test.swf","flash","100%","100%","10");
-</script>
+<object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
