--- a/websocket/test_fl.html
+++ b/websocket/test_fl.html
@@ -1,20 +1,13 @@
 <html>
 <head>
 <title>HXMPP.websocket.flash</title>
-<script type="text/javascript" src="../swfobject.js"></script>
 <script type="text/javascript" src="../../hxmpp/util/flash_websocket.js"></script>
 <style type="text/css">
-html { height:100%; }
-body { height:100%; }
+html, body { height:100%; }
 </style>
-<script type="text/javascript">
-swfobject.embedSWF("test.swf","flash","1000","600","9.0.0");
-</script>
 </head>
 <body>
 <div>HXMPP.websocket.flash</div>
-<div id="flash"></div>
-<script type="text/javascript">
-</script>
+<object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
 </html>
