--- a/bosh/test_js.html
+++ b/bosh/test_js.html
@@ -7,11 +7,11 @@ html { height:100%; }
 body { height:100%; }
 </style>
 </head>
-<body>
+<body onload="Test.main()">
 <div>HXMPP.BOSH.js</div>
 <div id="haxe:trace"></div>
 <script type="text/javascript">
-Test.main();
+//Test.main();
 </script>
 </body>
 </html>
