--- a/bosh/test_fl.html
+++ b/bosh/test_fl.html
@@ -2,12 +2,10 @@
 <head>
 <title>HXMPP.bosh.flash</title>
 <style type="text/css">
-html { height:100%; }
-body { height:100%; }
+html, body { height:100%; }
 </style>
 </head>
 <body>
-<div>HXMPP.BOSH.flash</div>
 <div id="haxe:trace"></div>
 <object type="application/x-shockwave-flash" data="test.swf" width="100%" height="100%" id="flash" style="visibility: visible; "></object>
 </body>
