--- a/bosh/test_fl.html
+++ b/bosh/test_fl.html
@@ -1,9 +1,7 @@
 <html>
 <head>
 <title>HXMPP.bosh.flash</title>
-<style type="text/css">
-html, body { height:100%; }
-</style>
+<style type="text/css">html, body { height:100%; }</style>
 </head>
 <body>
 <div id="haxe:trace"></div>
