--- a/bosh/test_js.html
+++ b/bosh/test_js.html
@@ -1,17 +1,11 @@
 <html>
 <head>
-<title>HXMPP.BOSH.js</title>
+<title>HXMPP.bosh.js</title>
 <script type="text/javascript" src="test.js"></script>
-<style type="text/css">
-html { height:100%; }
-body { height:100%; }
-</style>
+<style type="text/css">html, body { height:100%; }</style>
 </head>
 <body onload="Test.main()">
 <div>HXMPP.BOSH.js</div>
 <div id="haxe:trace"></div>
-<script type="text/javascript">
-//Test.main();
-</script>
 </body>
 </html>
